force-app/main/default/objects/Periodic_Form__c/Periodic_Form__c.object-meta.xml
<CustomObject>
    <label>Periodic Form</label>
    <nameField>
        <label>Periodic Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Periodic Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>