force-app/main/default/objects/Periodic_Form__c/fields/ACS_Periodic_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>ACS_Periodic_Due_Date__c</fullName>
    <label>Periodic Due Date</label>
    <type>Date</type>
</CustomField>