force-app/main/default/objects/Periodic_Form__c/fields/ACS_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>ACS_Submitted_Date__c</fullName>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>