force-app/main/default/objects/Periodic_Form__c/fields/Assigne_Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Assigne_Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Reviewer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Periodic_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>