force-app/main/default/objects/Periodic_Form__c/fields/Assigned_City__c.field-meta.xml
<CustomField>
    <fullName>Assigned_City__c</fullName>
    <label>Assigned City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>