force-app/main/default/objects/Periodic_Form__c/fields/Assigned_National_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Assigned_National_Meeting__c</fullName>
    <label>Assigned National Meeting</label>
    <length>50</length>
    <type>Text</type>
</CustomField>