force-app/main/default/objects/Periodic_Form__c/fields/Assigned_National_Meeting_Date__c.field-meta.xml
<CustomField>
    <fullName>Assigned_National_Meeting_Date__c</fullName>
    <label>Assigned National Meeting Date</label>
    <type>Date</type>
</CustomField>