force-app/main/default/objects/Periodic_Form__c/fields/Bachelor_graduates_to_graduate_school__c.field-meta.xml
<CustomField>
    <fullName>Bachelor_graduates_to_graduate_school__c</fullName>
    <label>Bachelor graduates to graduate school</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>