force-app/main/default/objects/Periodic_Form__c/fields/Chemistry_Seniors__c.field-meta.xml
<CustomField>
    <fullName>Chemistry_Seniors__c</fullName>
    <label>Chemistry Seniors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>