force-app/main/default/objects/Periodic_Form__c/fields/Name_of_Institution__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Institution__c</fullName>
    <label>Name of Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>