force-app/main/default/objects/Periodic_Form__c/fields/No_of_Chemistry_Juniors__c.field-meta.xml
<CustomField>
    <fullName>No_of_Chemistry_Juniors__c</fullName>
    <label>No. of Chemistry Juniors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>