force-app/main/default/objects/Periodic_Form__c/fields/No_of_rejections__c.field-meta.xml
<CustomField>
    <fullName>No_of_rejections__c</fullName>
    <label>No. of rejections</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>