force-app/main/default/objects/Periodic_Form__c/fields/Organisation__c.field-meta.xml
<CustomField>
    <fullName>Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Periodic Forms</relationshipLabel>
    <relationshipName>Periodic_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>