force-app/main/default/objects/Periodic_Form__c/fields/Probation_Date__c.field-meta.xml
<CustomField>
    <fullName>Probation_Date__c</fullName>
    <label>Probation Date</label>
    <type>Date</type>
</CustomField>