force-app/main/default/objects/Periodic_Form__c/fields/Probation_Till__c.field-meta.xml
<CustomField>
    <fullName>Probation_Till__c</fullName>
    <formula>ACS_Submitted_Date__c + 540</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Probation Till</label>
    <type>Date</type>
</CustomField>