force-app/main/default/objects/Periodic_Form__c/fields/Report_Prepared_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Prepared_By_Name__c</fullName>
    <label>Report Prepared By Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>