force-app/main/default/objects/Periodic_Form__c/fields/Response_Deadline_Date__c.field-meta.xml
<CustomField>
    <fullName>Response_Deadline_Date__c</fullName>
    <label>Response Deadline Date</label>
    <type>Date</type>
</CustomField>