force-app/main/default/objects/Periodic_Form__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under Review - OPT</fullName>
            </value>
            <value>
                <fullName>Approved by CPT</fullName>
            </value>
            <value>
                <fullName>Published</fullName>
            </value>
            <value>
                <fullName>Under Review - CPT</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Rejected by CPT</fullName>
            </value>
            <value>
                <fullName>Send for CPT Review</fullName>
            </value>
            <value>
                <fullName>Needs more information - CPT</fullName>
            </value>
            <value>
                <fullName>Needs more information - OPT</fullName>
            </value>
            <value>
                <fullName>Reopened - Need more information</fullName>
            </value>
            <value>
                <fullName>Submitted</fullName>
            </value>
            <value>
                <fullName>Rejected by OPT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>