force-app/main/default/objects/Periodic_Form__c/fields/Sum_enrollment_in_all_undergraduate_chem__c.field-meta.xml
<CustomField>
    <fullName>Sum_enrollment_in_all_undergraduate_chem__c</fullName>
    <label>Sum enrollment in all undergraduate chem</label>
    <length>255</length>
    <type>Text</type>
</CustomField>