force-app/main/default/objects/Periodic_Form__c/fields/Total_undergraduate_chemistry_students__c.field-meta.xml
<CustomField>
    <fullName>Total_undergraduate_chemistry_students__c</fullName>
    <formula>No_of_Chemistry_Freshmen__c + No_of_Chemistry_Juniors__c + No_of_Chemistry_Sophmores__c + Chemistry_Seniors__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total undergraduate chemistry students</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>