force-app/main/default/objects/Periodic_Form__c/fields/Undergraduates_on_campus__c.field-meta.xml
<CustomField>
    <fullName>Undergraduates_on_campus__c</fullName>
    <label>Undergraduates on campus</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>