force-app/main/default/objects/Periodic_Form__c/fields/Unknown__c.field-meta.xml
<CustomField>
    <fullName>Unknown__c</fullName>
    <label>Unknown</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>