force-app/main/default/objects/Periodic_Form__c/fields/Which_of_the_following_degrees_in_chemi__c.field-meta.xml
<CustomField>
    <fullName>Which_of_the_following_degrees_in_chemi__c</fullName>
    <label>Which of the following degrees in chemi</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bachelor&#39;s</fullName>
            </value>
            <value>
                <fullName>Master&#39;s</fullName>
            </value>
            <value>
                <fullName>PhD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>